[gd_scene load_steps=6 format=3 uid="uid://ii4a8ih108u2"]

[ext_resource type="Script" uid="uid://6nxtd67ex0de" path="res://src/Effect/ExperienceNumber.gd" id="1_gqp5h"]
[ext_resource type="Texture2D" uid="uid://c7wyw4y3jdl7j" path="res://assets/UI/NumberNew.png" id="2_crl7u"]

[sub_resource type="Animation" id="Animation_gqp5h"]
resource_name = "FloatOut"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Layer:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -8), Vector2(0, -16)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Layer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="1"]
resource_name = "FloatIn"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Layer:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -8)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Layer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_085d2"]
_data = {
&"FloatIn": SubResource("1"),
&"FloatOut": SubResource("Animation_gqp5h")
}

[node name="ExperienceNumber" type="Node2D"]
z_index = 5
z_as_relative = false
script = ExtResource("1_gqp5h")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_085d2")
}

[node name="Layer" type="Node2D" parent="."]
position = Vector2(0, -8)

[node name="Sign" type="Sprite2D" parent="Layer"]
position = Vector2(-4, 0)
texture = ExtResource("2_crl7u")
hframes = 11
vframes = 6
frame = 43

[node name="Num1" type="Sprite2D" parent="Layer"]
position = Vector2(5, 0)
texture = ExtResource("2_crl7u")
hframes = 11
vframes = 6
frame = 42

[node name="Num2" type="Sprite2D" parent="Layer"]
position = Vector2(14, 0)
texture = ExtResource("2_crl7u")
hframes = 11
vframes = 6
frame = 42

[node name="Num3" type="Sprite2D" parent="Layer"]
position = Vector2(23, 0)
texture = ExtResource("2_crl7u")
hframes = 11
vframes = 6
frame = 42

[node name="Timer" type="Timer" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
